--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
     --white-color-second: #F8F8F8;
     --black-color-first: #000000;
     --black-color-second: #666666;
+    --black-color-third: #888888;
     /* background-color: #FF8FE8; */
 }
 
@@ -23,7 +24,7 @@ body::before {
     right: 0;
     height: 100%;
     max-height: 100vh;
-    background: #c0909e url(background.svg);
+    background: #5364f2 url(background.svg);
     background-position: center;
     background-size: cover;
     border-bottom-left-radius: 50px;
@@ -59,7 +60,11 @@ body::before {
 .fs-10--lh-10 {
     font-size: 10px;
     line-height: 10px;
-    color: #888888;
+}
+
+.fs-22--lh-24 {
+    font-size: 22px;
+    line-height: 24px;
 }
 
 .text-center {
@@ -121,6 +126,10 @@ p {
 
 .black-text-2 {
     color: var(--black-color-second);
+}
+
+.black-text-3 {
+    color: var(--black-color-third);
 }
 
 .yellow-text {
@@ -395,6 +404,14 @@ nav .menu-button {
     margin-bottom: 44px;
 }
 
+.cards > :nth-child(odd) img {
+    filter: drop-shadow(0px 14px 34px rgba(0, 0, 0, 0.03));
+}
+
+.cards > :nth-child(even) img {
+    filter: drop-shadow(0px -16px 34px rgba(0, 0, 0, 0.11));
+}
+
 .grey-2 p {
     max-width: 504px;
     margin-top: 16px;
@@ -483,11 +500,20 @@ nav .menu-button {
     padding-top: 40px;
     padding-bottom: 40px;
     padding-left: 40px;
-    padding-right: 38px;
+    /* padding-right: 38px; */
 }
 
 .review-card p {
     max-width: 292px;
+}
+
+.review-card .review-author {
+    gap: 24px;
+    margin-top: 20px;
+}
+
+.review-card .review-author > div p:not(:last-of-type) {
+    margin-bottom: 12px;
 }
 
 .prev, .next {
@@ -500,6 +526,7 @@ nav .menu-button {
 
 .prev.active, .next.active {
     background-color: var(--white-color-first);
+    box-shadow: 0px 8px 20px rgba(193, 125, 103, 0.18);
 }
 
 .next svg {
@@ -524,6 +551,11 @@ nav .menu-button {
     margin-top: 22px;
     margin-bottom: 47px;
     cursor: pointer;
+}
+
+.row > div:first-of-type {
+    display: flex;
+    gap: 5px;
 }
 
 .col {
@@ -742,6 +774,12 @@ footer .last-line {
         margin-top: 50px;
     }
 
+    .review-card {
+        flex-basis: 47%;
+        align-items: center;
+        padding-right: 38px;
+    }
+
     /* footer styling */
     footer .links {
         margin-top: 26px;
@@ -897,8 +935,14 @@ footer .last-line {
         padding-bottom: 37px;
     }
 
+    .pink-gradient .header {
+        justify-content: end;
+    }
+
     .review-card {
         flex-basis: 100%;
+        padding-right: 38px;
+        align-items: center;
     }
 
     .buy {
